# SolarSystem

./: .clang-format  meson.build
Test/: main.cpp
Test/GeometryTest/: GeometryTest.cpp  meson.build
Test/Stubs/: OpenGlStubs.cpp
Test/TemplateTest/: TemplateTest.cpp  meson.build
include/Common/: types.h
include/Example/: example_file.h
include/Geometry/: shapes.h
include/View/: drawer.h  main_view.h  shaders.h  shape_stash.h
include/glad/: glad.h
src/: glad.c  main.c
src/Example/: example_file.c
src/Geometry/: shapes.c
src/View/: drawer.c  main_view.c
